--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       - APP_URL=http://localhost:8080
       - DB_HOST=db
       - DB_PORT=3306
-      - DB_DATABASE=portfolio
+      - DB_DATABASE=finance
       - DB_USERNAME=userenzo
       - DB_PASSWORD=123456789
     networks:
@@ -38,7 +38,7 @@ services:
       - "3306:3306"
     environment:
       MYSQL_ROOT_PASSWORD: root_password
-      MYSQL_DATABASE: portfolio
+      MYSQL_DATABASE: finance
       MYSQL_USER: userenzo
       MYSQL_PASSWORD: 123456789
     volumes:
